# fifechan

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING  CPPLINT.cfg  ChangeLog  INSTALL  INSTALL.md  LICENSE.md  Makefile.am  NEWS  README  README.PSP  README.md  TODO  TODO.md  appveyor.yml  autogen.sh  buildpsp.sh  config.sub  configure.in  doxygen.conf  fifechan.pc.in  format.sh  guichan.dev  guichan.dsp  guichan.vcproj  guichan_allegro.dev  guichan_allegro.vcproj  guichan_hge.vcproj  guichan_opengl.dev  (+6 more)
demos/ff/: ChangeLog  Makefile.am  README  autogen.sh  configure.in  ff.dev
demos/ff/include/: ffcharacterchooser.hpp  ffcontainer.hpp  ffdemo.hpp  fflistbox.hpp  ffscrollarea.hpp  stringlistmodel.hpp
demos/ff/src/: ffcharacterchooser.cpp  ffcontainer.cpp  ffdemo.cpp  fflistbox.cpp  ffscrollarea.cpp  guichanffdemo.cpp
demos/fps/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  README  config.status  configure.in  fps.dev  libtool
demos/fps/images/: Makefile.am
demos/fps/include/: fpsbutton.hpp  fpscheckbox.hpp  fpsdemo.hpp
demos/fps/sound/: Makefile.am
demos/fps/src/: fifechanfpsdemo.cpp  fpsbutton.cpp  fpscheckbox.cpp  fpsdemo.cpp  guichanfpsdemo.cpp
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.examples  README.md  action.hpp  allegro.hpp  allegroaction.cpp  allegroaction.dev  allegroaction.vcproj  allegroglwidgets.cpp  allegrohelloworld.cpp  allegrohelloworld.dev  allegrohelloworld.vcproj  allegrowidgets.cpp  allegrowidgets.dev  allegrowidgets.vcproj  directx3d.hpp  helloworld.hpp  hge.hpp  hgeaction.cpp  hgeaction.vcproj  hgehelloworld.cpp  hgehelloworld.vcproj  hgewidgets.cpp  hgewidgets.vcproj  irrlicht.hpp  irrlichtaction.cpp  irrlichthelloworld.cpp  irrlichtwidgets.cpp  openglallegro.hpp  openglallegroaction.cpp  openglallegroaction.vcproj  openglallegrohelloworld.cpp  openglallegrohelloworld.vcproj  openglallegrowidgets.cpp  openglallegrowidgets.vcproj  openglhelloworld.cpp  openglsdl.hpp  openglsdlaction.cpp  (+23 more)
examples/ff/: CMakeLists.txt  README.md
examples/ff/include/: ffcharacterchooser.hpp  ffcontainer.hpp  ffdemo.hpp  (+3 more)
examples/fps/: CMakeLists.txt  README
examples/simple/: CMakeLists.txt  simple_textbox_demo.cpp
examples/spacers/: CMakeLists.txt  dynamic_remove_spacers.cpp  spacers_in_vbox_hbox.cpp
include/fifechan/: CPPLINT.cfg  Makefile.am  actionevent.hpp  actionlistener.hpp  allegro.hpp  cairo.hpp  cliprectangle.hpp  color.hpp  containerevent.hpp  containerlistener.hpp  deathlistener.hpp  defaultfont.hpp  directx3d.hpp  event.hpp  exception.hpp  fixedsizeconstraint.hpp  focushandler.hpp  focuslistener.hpp  font.hpp  genericinput.hpp  glut.hpp  graphics.hpp  groups.hpp  gui.hpp  hge.hpp  image.hpp  imagefont.hpp  imageloader.hpp  input.hpp  inputevent.hpp  irrlicht.hpp  key.hpp  keyevent.hpp  keyinput.hpp  keylistener.hpp  listmodel.hpp  math.hpp  mouseevent.hpp  mouseinput.hpp  mouselistener.hpp  (+17 more)
include/guichan/: Makefile.am  actionevent.hpp  actionlistener.hpp  allegro.hpp  basiccontainer.hpp  cairo.hpp  cliprectangle.hpp  color.hpp  containerevent.hpp  containerlistener.hpp  deathlistener.hpp  defaultfont.hpp  directx3d.hpp  event.hpp  exception.hpp  focushandler.hpp  focuslistener.hpp  font.hpp  genericinput.hpp  glut.hpp  graphics.hpp  gui.hpp  hge.hpp  image.hpp  imagefont.hpp  imageloader.hpp  input.hpp  inputevent.hpp  irrlicht.hpp  key.hpp  keyevent.hpp  keyinput.hpp  keylistener.hpp  listmodel.hpp  mouseevent.hpp  mouseinput.hpp  mouselistener.hpp  opengl.hpp  openlayer.hpp  platform.hpp  (+8 more)
src/: Makefile.am  actionevent.cpp  basiccontainer.cpp  cliprectangle.cpp  color.cpp  containerevent.cpp  defaultfont.cpp  event.cpp  exception.cpp  fifechan.cpp  fixedsizeconstraint.cpp  focushandler.cpp  font.cpp  genericinput.cpp  graphics.cpp  gui.cpp  guichan.cpp  image.cpp  imagefont.cpp  inputevent.cpp  key.cpp  keyevent.cpp  keyinput.cpp  mouseevent.cpp  mouseinput.cpp  rectangle.cpp  selectionevent.cpp  size.cpp  text.cpp  utf8stringeditor.cpp  visibilityeventhandler.cpp  widget.cpp
src/allegro/: Makefile.am  allegro.cpp  allegrofont.cpp  allegroglyphkeeperfont.cpp  allegrographics.cpp  allegroimage.cpp  allegroimageloader.cpp  allegroinput.cpp
src/cairo/: cairo.cpp  cairofont.cpp  cairographics.cpp  cairoimage.cpp  cairoimageloader.cpp
src/contrib/: Makefile
src/directx3d/: CPPLINT.cfg  directx3dgraphics.cpp  directx3dimage.cpp  directx3dimageloader.cpp  directx3dinput.cpp
src/events/: actionevent.cpp  containerevent.cpp  event.cpp  inputevent.cpp  keyevent.cpp  mouseevent.cpp  selectionevent.cpp
src/glut/: Makefile.am  glutinput.cpp
src/hge/: hgegraphics.cpp  hgeimage.cpp  hgeimagefont.cpp  hgeimageloader.cpp  hgeinput.cpp
src/irrlicht/: irrlicht.cpp  irrlichtgraphics.cpp  irrlichtimage.cpp  irrlichtimageloader.cpp  irrlichtinput.cpp
src/opengl/: Makefile.am  fifechan_opengl.pc.in  opengl.cpp  openglgraphics.cpp  openglimage.cpp  opengloglftfont.cpp
src/openlayer/: openlayer.cpp  openlayerfont.cpp  openlayergraphics.cpp  openlayerimage.cpp  openlayerimageloader.cpp  openlayerinput.cpp
src/sdl/: Makefile.am  fifechan_sdl.pc.in  sdl.cpp  sdl2graphics.cpp  sdlgraphics.cpp  sdlimage.cpp  sdlimageloader.cpp  sdlinput.cpp  sdltruetypefont.cpp
src/widgets/: Makefile.am  adjustingcontainer.cpp  autolayoutcontainer.cpp  axislayoutcontainer.cpp  bargraph.cpp  button.cpp  checkbox.cpp  circularcontainer.cpp  container.cpp  curvegraph.cpp  dropdown.cpp  flowcontainer.cpp  hbox.cpp  icon.cpp  iconprogressbar.cpp  imagebutton.cpp  imageprogressbar.cpp  label.cpp  linegraph.cpp  listbox.cpp  passwordfield.cpp  piegraph.cpp  pointgraph.cpp  radiobutton.cpp  scrollarea.cpp  slider.cpp  spacer.cpp  tab.cpp  tabbedarea.cpp  textbox.cpp  textfield.cpp  togglebutton.cpp  vbox.cpp  window.cpp
src/x/: Makefile.am  xgraphics.cpp
tests/integration/: CMakeLists.txt  README.md  action.hpp  helloworld.hpp  widgets.hpp
tests/unit/: CMakeLists.txt  README.md
(+926 files in other folders)
